# TaskFlow

./: .gitignore  Dockerfile  MANIFEST.in  README.md  README_DOCKER.md  customer_analysis.py  data_preprocessing.py  docker-compose.yml  pyproject.toml  requirements.txt  sales_analysis.py  setup.py  学习笔记.md
ag2-wrapper/: OAI_CONFIG_LIST  PROGRESS.md  README.md  requirements.txt  setup.py
ag2_engine/: ag2_executor.py  cli.py  config_loader.py
archive/: README.md  claude_behaviour_notes.md  claude_behaviour_verification.md  claude_cli_test.py  claude_example.py  claude_exit.py  claude_pexpect.py  claude_pexpect_simple.py  concurrent_doc_gen.py  concurrent_doc_gen_selected_files.py  doc_gen.py  file_count.py  fix_imports.py
configs/: ag2_config.yaml
docs/: Gemini集成指南.md  PROMPT_STRUCTURE.md  README.md  auto_agent_chat_design.md  code_structure_refactor.md  refactor_v2.md  代码注释生成系统设计文档.md  任务拆分与执行系统设计文档.md  任务拆分和执行系统实现步骤.md
examples/: ag2_execution_example.py  ag2_llm_config_example.py  ag2_openrouter_api_test.py  context_management_example.py  group_chat_example.py  nested_chat_example.py  parallel_task_example.py  sequential_chat_example.py  swarm_example.py  task_decomposition_example.py  test_complex_task.txt  test_execution_only.py  test_planning_only.py  two_agent_chat_example.py
output/: add.py  customer_analysis_results.json  customer_data.csv  fully_mocked_test.py  mock_claude_tools.py  run_continue_tests.py  sales_analysis_results.json  simple_tool_test.py  task1_result.json  task_analysis.json  task_breakdown.json  test_continue_feature.py  业务分析结果.json  (+3 more)
(+273 files in other folders)
